Improve CSS for projects.html

--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@ body {
   width: auto;
   margin-left:  15%;
   margin-right: 15%;
+  margin-top: 15px;
+  margin-bottom: 15px; 
   background: #CCCCCC;
   align-content: center;
  }
@@ -90,18 +92,9 @@ body {
   margin-left: 10%;
   margin-right: 10%;
 
-  padding-bottom: 10px;
   align-content: center;
-  margin-bottom: 10px;
   box-sizing: border-box;
   display: block;
-
-  
-}
-
-.content-block p {
-  font: normal 14px/22px sans-serif;
-  color: #222222;
 }
 
 .presentation-block {
@@ -110,9 +103,7 @@ body {
   padding-left: 3%;
   padding-right: 3%;
   padding-bottom: 10%;
-
-  height: 325px;
-  /*height: 100%;*/
+  height: 340px;
 
   -webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
   -moz-box-shadow:    0px 3px 3px 0px rgba(0,0,0,0.75);
@@ -122,15 +113,12 @@ body {
 
 .presentation-block .picture {
   float: left;
-  height: 100%;
+  margin-top: 5%;
 }
 
 .presentation-block .picture img {
   display: block;
-  margin: auto; 
-  /*max-height: 250px;*/
-  /*border: 3px solid #00AA00;*/
-  border-radius: 5px;
+  border-radius: 7px;
 }
 
 .presentation-block .presentation-content {
@@ -193,10 +181,6 @@ body {
   max-height: 25px;
 }
 
-/*.content-presentation-bottom li a:hover {
-  background: #FFFFFF;
-}*/
-
 .page-footer {
   text-align-last: center;
   font-family: sans-serif;
@@ -208,7 +192,51 @@ body {
   border-top: 5px solid #0177AF;
 }
 
-h2#my-name {
+.project-content {
+  /*margin: 5% 5%;*/
+  /*border-radius: 7px;*/
+  -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow:    0px 3px 10px 0px rgba(0,0,0,0.75);
+  box-shadow:         0px 3px 10px 0px rgba(0,0,0,0.75);
+}
+
+.project-content img {
+  display: block;
+
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(1,1,1,0.75);
+  -moz-box-shadow:    0px 0px 5px 0px rgba(1,1,1,0.75);
+  box-shadow:         0px 0px 5px 0px rgba(1,1,1,0.75);
+
+}
+
+.project-content h2 {
+  font: bold 20px/22px sans-serif;
+  color: #111111;
+}
+
+.project-content .text {
+  padding: 2% 5%;
+  font: normal 14px/22px sans-serif;
+  color: #222222;
+}
+
+.project-content p, .project-content li {
+  font: normal 14px/22px sans-serif;
+  color: #222222;
+}
+
+.project-content h2 a {
+  color: inherit;
+  font: inherit;
+  text-decoration: none;
+  text-shadow: 1px 0px 1px #DDDDDD;
+}
+
+.project-content h2 a:hover {
+  color: #00CCFF;
+}
+
+h2#my-name { 
   color: #01AACF;
 }
 
