--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .menu-bar {
   padding: 0;
   width: 100%;
-  background-color: #2B1B17;
+  background-color: #232323;
   border-bottom: 5px solid #0177AF;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
@@ -45,13 +45,13 @@ body {
 .menu-bar li {
   padding-top: 7px;
   float: left;
-  background: #2B1B17;
+  background: #232323;
   position: relative;
 }
 
 .menu-bar li a {
   color:      #FFFFFF;
-  background: #2B1B17;
+  background: #232323;
   width: 100%;
   padding: 20px 40px;
   
@@ -187,7 +187,7 @@ body {
   text-align-last: center;
   font-family: sans-serif;
   color: #FFEEFF;
-  background: #2B1B17;
+  background: #232323;
   height: 100%;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -244,4 +244,41 @@ h2#my-name {
   color: #01AACF;
 }
 
+
+.experience-block {
+  background: #FEFEFE;
+  padding: 2% 2%;
+
+  -webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow:    0px 3px 10px 0px rgba(0,0,0,0.75);
+  box-shadow:         0px 3px 10px 0px rgba(0,0,0,0.75);
+
+}
+
+.experience h2 {
+  font: bold 20px/22px sans-serif;
+  color: #111111;
+}
+
+.experience .text {
+  padding: 2% 5%;
+  font: normal 14px/22px sans-serif;
+  color: #222222;
+}
+
+.experience p, .experience li, .project-content li {
+  font: normal 14px/22px sans-serif;
+  color: #222222;
+}
+
+.experience h2 a {
+  color: inherit;
+  font: inherit;
+  text-decoration: none;
+  text-shadow: 1px 0px 1px #DDDDDD;
+}
+
+.experience small {
+  font: normal 12px/22px sans-serif;
+}
 
